--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,4 +16,4 @@ jobs:
       run: |
         pip install pytest
     - name: Run tests
-      run: bash test.bash
+      run: bash ./scripts/test.bash
