--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: pip install -y jq
+    - name: Install jq
+      run: sudo apt-get update && sudo apt-get install -y jq
     - name: Run tests
       run: bash ./tests/test.bash
