修正点全般の改善

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,4 @@ jobs:
     - name: Install jq
       run: sudo apt-get update && sudo apt-get install -y jq
     - name: Run tests
-      run: bash ./tests/test.bash
+      run: bash ./test.bash
